--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ p{
 /* START BODY BORDER */
 html:before,html:after,body:before,body:after{
     content:"";
-    background:#162b47;
+    background:#12283A;
     position:fixed;
     display:block;
     z-index:5;
@@ -125,7 +125,7 @@ body:after{
 
 #projects{
     font-size: 2.5rem;
-    margin-top: 20vh;
+    margin-top: 10vh;
 }
 
 @media (max-width: 1200px){
